// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual regression > should snapshot ProgressBar 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="text-center text-sm font-medium text-muted-foreground"
    >
      Pergunta 
      3
       de 
      10
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="h-2 w-full overflow-hidden rounded-full bg-secondary"
      role="progressbar"
    >
      <div
        class="h-full bg-primary"
        style="width: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`Visual regression > should snapshot QuestionCard initial render 1`] = `
<div>
  <div
    class="space-y-6"
    style="opacity: 0; transform: translateY(20px);"
  >
    <h2
      class="text-2xl font-semibold"
    >
      Qual é a capital do Brasil?
    </h2>
    <div
      class="space-y-3"
    >
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        São Paulo
      </button>
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        Rio de Janeiro
      </button>
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        Brasília
      </button>
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        Salvador
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual regression > should snapshot QuestionCard with selected answer 1`] = `
<div>
  <div
    class="space-y-6"
    style="opacity: 0; transform: translateY(20px);"
  >
    <h2
      class="text-2xl font-semibold"
    >
      Qual é a capital do Brasil?
    </h2>
    <div
      class="space-y-3"
    >
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        São Paulo
      </button>
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        Rio de Janeiro
      </button>
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-primary bg-primary text-primary-foreground"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        Brasília
      </button>
      <button
        class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
        style="opacity: 0; transform: translateX(-20px);"
        tabindex="0"
      >
        Salvador
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual regression > should snapshot QuizFlow initial render 1`] = `
<div>
  <div
    class="mx-auto max-w-2xl space-y-8 p-6"
  >
    <div
      class="space-y-2"
    >
      <div
        class="text-center text-sm font-medium text-muted-foreground"
      >
        Pergunta 
        1
         de 
        1
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="h-2 w-full overflow-hidden rounded-full bg-secondary"
        role="progressbar"
      >
        <div
          class="h-full bg-primary"
          style="width: 0px;"
        />
      </div>
    </div>
    <div
      class="relative overflow-hidden"
    >
      <div
        style="opacity: 1; transform: none;"
      >
        <div
          class="space-y-6"
          style="opacity: 1; transform: none;"
        >
          <h2
            class="text-2xl font-semibold"
          >
            Qual é a capital do Brasil?
          </h2>
          <div
            class="space-y-3"
          >
            <button
              class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              São Paulo
            </button>
            <button
              class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              Rio de Janeiro
            </button>
            <button
              class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              Brasília
            </button>
            <button
              class="w-full rounded-lg border-2 p-4 text-left transition-colors border-border hover:border-primary"
              style="opacity: 1; transform: none;"
              tabindex="0"
            >
              Salvador
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-between"
    >
      <button
        class="rounded-lg bg-secondary px-6 py-2 text-secondary-foreground disabled:opacity-50"
        disabled=""
      >
        Anterior
      </button>
      <button
        class="rounded-lg bg-primary px-6 py-2 text-primary-foreground disabled:opacity-50"
        disabled=""
      >
        Próxima
      </button>
    </div>
  </div>
</div>
`;
